# ml-flow

./: .env_example  .gitignore  ARTICLE.md  README.md  docker-compose.yml  ml_flow.py  mlflow.db  pyproject.toml
app/: eval_data.py  ingestion.py  llm_service.py  main.py  mlflow_judge.py
data/: data.txt
docker/: docker-compose.yml
