[project]
name = "ml-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.2.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.10",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "scikit-learn>=1.8.0",
]
